[package]
name = "tanker-atlassiand"
version = "0.1.0"
authors = ["tux3 <barrdetwix@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = { version  = "0.3", default-features = false }
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls", "gzip"] }
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "cargo"] }
serde = {version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
toml = "0.5.8"
